Lyrics Scroll Synchronizer architecture update