@@ -93,7 +93,7 @@ public class MusicEntity {
     }
 
     public void setRating(int rating) {
-        this.rating = Math.max(0, Math.min(5, rating));
+        this.rating = Math.clamp(rating, 0, 5);
     }
 
     public LocalDateTime getCreatedAt() {
